[package]
name = "hilo"
version = "0.1.0"
edition = "2024"
authors = ["Maple <mapleshade20@gmail.com>"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "hilo"

[dependencies]
async-trait = "0.1"
axum = "0.8"
dashmap = "6.1"
dotenvy = "0.15"
jsonwebtoken = "9.3"
rand = "0.9.2"
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
secrecy = "0.10.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "uuid",
    "migrate",
    "time",
] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
validator = { version = "0.20", features = ["derive"] }


[dev-dependencies]
tower = "0.5"
