[package]
name = "hilo"
version = "0.1.0"
edition = "2024"
authors = ["Maple <mapleshade20@gmail.com>"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "hilo"

[dependencies]
async-trait = "0.1"
axum = { version = "0.8", features = ["multipart"] }
dashmap = "6.1"
dotenvy = "0.15"
image = "0.25"
jsonwebtoken = "9.3"
rand = "0.9.2"
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "uuid",
    "migrate",
    "time",
] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.6", features = ["fs"] }
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = [
    "ansi",
    "env-filter",
    "json",
] }
tracing-bunyan-formatter = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
validator = { version = "0.20", features = ["derive"] }
time = { version = "0.3", features = ["serde"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "multipart"] }
